fix top nav links at small screen sizes, no longer cut off

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ li a:hover {
 
 	.nav .nav-menu ul li {
 		width: 100%;
-		padding: 20px 20px;
+		padding: 20px 0px;
 		font-size: 16px;
 	}
 }
@@ -200,12 +200,12 @@ li a:hover {
 
 @media all and (max-width: 567px) {
 	.hero h1 {
-		font-size: 4rem;
+		font-size: 3rem;
 	}
 	.hero p {
 		font-size: 1.8rem;
 		line-height: 2.25rem;
-		width: 89%;
+		width: 100%;
 		padding-top: 15px;
 	}
 }
